// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DataTable > Snapshots > matches checked state snapshot 1`] = `
<div
  aria-disabled="false"
  class="dataTable dataTable--default dataTable--sizeDefault"
  data-error="false"
  data-loading="false"
  data-testid="datatable"
>
  <div
    class="dataTable__scrollContainer"
  >
    <table
      class="dataTable__table"
      role="table"
    >
      <thead
        class="dataTable__thead"
      >
        <tr>
          <th
            class="dataTable__th"
            role="columnheader"
            tabindex="-1"
          >
            <div
              class="dataTable__thContent"
            >
              <span>
                Name
              </span>
            </div>
          </th>
          <th
            class="dataTable__th"
            role="columnheader"
            tabindex="-1"
          >
            <div
              class="dataTable__thContent"
            >
              <span>
                Value
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="dataTable__tbody"
      >
        <tr
          class="dataTable__row"
          role="row"
        >
          <td
            class="dataTable__td"
            role="cell"
          >
            Test Item 1
          </td>
          <td
            class="dataTable__td"
            role="cell"
          >
            A
          </td>
        </tr>
        <tr
          class="dataTable__row"
          role="row"
        >
          <td
            class="dataTable__td"
            role="cell"
          >
            Test Item 2
          </td>
          <td
            class="dataTable__td"
            role="cell"
          >
            B
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataTable > Snapshots > matches default snapshot 1`] = `
<div
  aria-disabled="false"
  class="dataTable dataTable--default dataTable--sizeDefault"
  data-error="false"
  data-loading="false"
  data-testid="datatable"
>
  <div
    class="dataTable__scrollContainer"
  >
    <table
      class="dataTable__table"
      role="table"
    >
      <thead
        class="dataTable__thead"
      >
        <tr>
          <th
            class="dataTable__th"
            role="columnheader"
            tabindex="-1"
          >
            <div
              class="dataTable__thContent"
            >
              <span>
                Name
              </span>
            </div>
          </th>
          <th
            class="dataTable__th"
            role="columnheader"
            tabindex="-1"
          >
            <div
              class="dataTable__thContent"
            >
              <span>
                Value
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="dataTable__tbody"
      >
        <tr
          class="dataTable__row"
          role="row"
        >
          <td
            class="dataTable__td"
            role="cell"
          >
            Test Item 1
          </td>
          <td
            class="dataTable__td"
            role="cell"
          >
            A
          </td>
        </tr>
        <tr
          class="dataTable__row"
          role="row"
        >
          <td
            class="dataTable__td"
            role="cell"
          >
            Test Item 2
          </td>
          <td
            class="dataTable__td"
            role="cell"
          >
            B
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataTable > Snapshots > matches disabled state snapshot 1`] = `
<div
  aria-disabled="true"
  class="dataTable dataTable--default dataTable--sizeDefault dataTable--disabled"
  data-error="false"
  data-loading="false"
  data-testid="datatable"
>
  <div
    class="dataTable__scrollContainer"
  >
    <table
      class="dataTable__table"
      role="table"
    >
      <thead
        class="dataTable__thead"
      >
        <tr>
          <th
            class="dataTable__th"
            role="columnheader"
            tabindex="-1"
          >
            <div
              class="dataTable__thContent"
            >
              <span>
                Name
              </span>
            </div>
          </th>
          <th
            class="dataTable__th"
            role="columnheader"
            tabindex="-1"
          >
            <div
              class="dataTable__thContent"
            >
              <span>
                Value
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="dataTable__tbody"
      >
        <tr
          class="dataTable__row dataTable__row--disabled"
          role="row"
        >
          <td
            class="dataTable__td"
            role="cell"
          >
            Test Item 1
          </td>
          <td
            class="dataTable__td"
            role="cell"
          >
            A
          </td>
        </tr>
        <tr
          class="dataTable__row dataTable__row--disabled"
          role="row"
        >
          <td
            class="dataTable__td"
            role="cell"
          >
            Test Item 2
          </td>
          <td
            class="dataTable__td"
            role="cell"
          >
            B
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataTable > Snapshots > matches error state snapshot 1`] = `
<div
  class="dataTable dataTable--default dataTable--error"
>
  <div
    class="dataTable__errorContent"
  >
    <div
      class="dataTable__errorTitle"
    >
      Error
    </div>
    <div
      class="dataTable__errorMessage"
    />
  </div>
</div>
`;

exports[`DataTable > Snapshots > matches hover state snapshot 1`] = `
<div
  aria-disabled="false"
  class="dataTable dataTable--default dataTable--sizeDefault"
  data-error="false"
  data-loading="false"
  data-testid="datatable"
>
  <div
    class="dataTable__scrollContainer"
  >
    <table
      class="dataTable__table"
      role="table"
    >
      <thead
        class="dataTable__thead"
      >
        <tr>
          <th
            class="dataTable__th"
            role="columnheader"
            tabindex="-1"
          >
            <div
              class="dataTable__thContent"
            >
              <span>
                Name
              </span>
            </div>
          </th>
          <th
            class="dataTable__th"
            role="columnheader"
            tabindex="-1"
          >
            <div
              class="dataTable__thContent"
            >
              <span>
                Value
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="dataTable__tbody"
      >
        <tr
          class="dataTable__row"
          role="row"
        >
          <td
            class="dataTable__td"
            role="cell"
          >
            Test Item 1
          </td>
          <td
            class="dataTable__td"
            role="cell"
          >
            A
          </td>
        </tr>
        <tr
          class="dataTable__row"
          role="row"
        >
          <td
            class="dataTable__td"
            role="cell"
          >
            Test Item 2
          </td>
          <td
            class="dataTable__td"
            role="cell"
          >
            B
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataTable > Snapshots > matches loading state snapshot 1`] = `
<div
  class="dataTable dataTable--loading"
>
  <div
    class="dataTable__loadingContent"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-loader-circle dataTable__spinner"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12a9 9 0 1 1-6.219-8.56"
      />
    </svg>
    <span
      class="dataTable__loadingText"
    >
      Loading table data...
    </span>
    <span
      class="dataTable__srOnly"
      role="status"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`DataTable > Snapshots > matches required state snapshot 1`] = `
<div
  aria-disabled="false"
  class="dataTable dataTable--default dataTable--sizeDefault"
  data-error="false"
  data-loading="false"
  data-testid="datatable"
  required=""
>
  <div
    class="dataTable__scrollContainer"
  >
    <table
      class="dataTable__table"
      role="table"
    >
      <thead
        class="dataTable__thead"
      >
        <tr>
          <th
            class="dataTable__th"
            role="columnheader"
            tabindex="-1"
          >
            <div
              class="dataTable__thContent"
            >
              <span>
                Name
              </span>
            </div>
          </th>
          <th
            class="dataTable__th"
            role="columnheader"
            tabindex="-1"
          >
            <div
              class="dataTable__thContent"
            >
              <span>
                Value
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="dataTable__tbody"
      >
        <tr
          class="dataTable__row"
          role="row"
        >
          <td
            class="dataTable__td"
            role="cell"
          >
            Test Item 1
          </td>
          <td
            class="dataTable__td"
            role="cell"
          >
            A
          </td>
        </tr>
        <tr
          class="dataTable__row"
          role="row"
        >
          <td
            class="dataTable__td"
            role="cell"
          >
            Test Item 2
          </td>
          <td
            class="dataTable__td"
            role="cell"
          >
            B
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataTable > Snapshots > matches selected state snapshot 1`] = `
<div
  aria-disabled="false"
  class="dataTable dataTable--default dataTable--sizeDefault"
  data-error="false"
  data-loading="false"
  data-testid="datatable"
>
  <div
    class="dataTable__scrollContainer"
  >
    <table
      class="dataTable__table"
      role="table"
    >
      <thead
        class="dataTable__thead"
      >
        <tr>
          <th
            class="dataTable__th"
            role="columnheader"
            tabindex="-1"
          >
            <div
              class="dataTable__thContent"
            >
              <span>
                Name
              </span>
            </div>
          </th>
          <th
            class="dataTable__th"
            role="columnheader"
            tabindex="-1"
          >
            <div
              class="dataTable__thContent"
            >
              <span>
                Value
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="dataTable__tbody"
      >
        <tr
          class="dataTable__row"
          role="row"
        >
          <td
            class="dataTable__td"
            role="cell"
          >
            Test Item 1
          </td>
          <td
            class="dataTable__td"
            role="cell"
          >
            A
          </td>
        </tr>
        <tr
          class="dataTable__row"
          role="row"
        >
          <td
            class="dataTable__td"
            role="cell"
          >
            Test Item 2
          </td>
          <td
            class="dataTable__td"
            role="cell"
          >
            B
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
